# rollercoaster

./: .gitignore  CMakeLists.txt  IN3005.doc  README.md  todo.txt
cmake/: FindFreeImage.cmake
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
resources/models/cart/: cart.mtl
resources/models/penguin/: penguin.mtl
resources/shaders/: main.frag  main.vert
resources/track/: main.csv  track.txt
rollercoaster/: billboard.cpp  billboard.h  camera.cpp  camera.h  canvas.cpp  canvas.h  cart.cpp  cart.h  circle.cpp  circle.h  cuboid.cpp  cuboid.h  disk.cpp  disk.h  fbo.cpp  fbo.h  font.cpp  font.h  frame.cpp  frame.h  lighting.cpp  lighting.h  main.cpp  mesh.cpp  mesh.h  objmodel.cpp  objmodel.h  octagon.cpp  octagon.h  penguins.cpp  penguins.h  plane.cpp  point.cpp  point.h  quad.cpp  quad.h  rollercoaster.vcxproj  rollercoaster.vcxproj.filters  skybox.cpp  skybox.h  (+17 more)
rollercoaster/resources/: recource_references.txt
rollercoaster/resources/shaders/: betterToon.frag  betterToon.vert  main.frag  perVertexLighting.frag  perVertexLighting.vert  terrain.frag  terrain.vert  toon.frag  (+1 more)
src/: billboard.cpp  billboard.h  camera.cpp  camera.h  canvas.cpp  canvas.h  cart.cpp  cart.h  circle.cpp  circle.h  common.h  fbo.cpp  fbo.h  frame.h  lighting.cpp  lighting.h  main.cpp  matrixstack.cpp  matrixstack.h  mesh.cpp  mesh.h  objmodel.cpp  objmodel.h  octagon.cpp  penguins.cpp  plane.cpp  plane.h  quad.cpp  quad.h  shader.cpp  shader.h  shaderprogram.cpp  shaderprogram.h  skybox.cpp  skybox.h  sphere.cpp  sphere.h  spline.cpp  spline.h  splinegun.cpp  (+15 more)
(+2 files in other folders)
